fixed the size of the categories and set the z-index of navbar

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ fieldset{
     top: 0;
     background-color: white;
     width: 100%;
+    z-index: 1;
 }
 
 .logo{
@@ -155,9 +156,15 @@ fieldset{
 }
 
 .box-3{
+    overflow: auto;
     width: 28%;
     float: left;
     margin: 2%;
+}
+
+.category-image-responsive{
+    width: 100%; 
+    height:250px;
 }
 
 
